--- a/romeano/app/core/util/inviteEmail.html
+++ b/romeano/app/core/util/inviteEmail.html
@@ -19,7 +19,7 @@
           >
             {{invitee_name}} has shared your customer portal:
           </h2>
-          <div class="clearfix" style="box-sizing: border-box; text-align: center">
+          <div class="clearfix" style="box-sizing: border-box; text-align: center; vertical-align: middle">
             <div class="img-container" style="box-sizing: border-box; float: left; width: 33.33%; padding: 5px">
               <img
                 style="box-sizing: border-box; max-width: 100%; max-height: 80px"
