--- a/romeano/app/core/util/inviteEmail.html
+++ b/romeano/app/core/util/inviteEmail.html
@@ -15,22 +15,48 @@
               padding: 10px;
               font-weight: 300;
               font-size: 20;
+              margin-bottom: 0px;
             "
           >
             {{invitee_name}} has shared your customer portal:
           </h2>
           <div class="clearfix" style="box-sizing: border-box; text-align: center; vertical-align: middle">
-            <div class="img-container" style="box-sizing: border-box; float: left; width: 33.33%; padding: 5px">
+            <div
+              class="img-container"
+              style="
+                box-sizing: border-box;
+                float: left;
+                width: 25%;
+                padding: 5px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 80px;
+                margin-right: 20px;
+              "
+            >
               <img
-                style="box-sizing: border-box; max-width: 100%; max-height: 80px"
+                style="box-sizing: border-box; max-width: 100%; max-height: 75px"
                 src="{{vendor_logo}}"
                 alt="InviteLogo"
               />
             </div>
 
-            <div class="img-container" style="box-sizing: border-box; float: left; width: 33.33%; padding: 5px">
+            <div
+              class="img-container"
+              style="
+                box-sizing: border-box;
+                float: left;
+                width: 25%;
+                padding: 5px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 80px;
+              "
+            >
               <img
-                style="box-sizing: border-box; max-width: 100%; max-height: 80px"
+                style="box-sizing: border-box; max-width: 100%; max-height: 75px"
                 src="{{customer_logo}}"
                 alt="CustomerLogo"
               />
