Fix add portal and email

--- a/romeano/app/core/util/inviteEmail.html
+++ b/romeano/app/core/util/inviteEmail.html
@@ -3,7 +3,7 @@
 
 </head>
 <body style="box-sizing: border-box;"> -->
-  <div style="box-sizing: border-box; background-color: #f5f5f5">
+  <div style="box-sizing: border-box; background-color: #ffffff">
     <div style="box-sizing: border-box; text-align: center">
       <div style="text-align: center; padding: 2px">
         <div style="width: fit-content; margin: 40px">
