--- a/romeano/app/core/util/inviteEmail.html
+++ b/romeano/app/core/util/inviteEmail.html
@@ -22,6 +22,7 @@
           </h2>
           <div class="clearfix" style="box-sizing: border-box; text-align: center; vertical-align: middle">
             <div style="padding: 10px; box-sizing: border-box; display: flex; gap: 0.5rem; align-items: center">
+              {{#if vendor_logo}}
               <img
                 alt="Invite Logo"
                 src="{{vendor_logo}}"
@@ -34,7 +35,7 @@
                   margin-bottom: auto;
                 "
               />
-              {{#if customer_logo}}
+              {{/if}} {{#if customer_logo}}
               <hr
                 style="
                   box-sizing: border-box;
